--- a/StandbyWatch.xcodeproj/xcshareddata/xcschemes/StandbyWatch.xcscheme
+++ b/StandbyWatch.xcodeproj/xcshareddata/xcschemes/StandbyWatch.xcscheme
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1430"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES"
-      runPostActionsOnFailure = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "NO"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0B877EC2ED1F248AA3EFE160"
-               BuildableName = "StandbyApp.app"
-               BlueprintName = "StandbyApp"
-               ReferencedContainer = "container:StandbyWatch.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "NO"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
+            buildForProfiling = "YES"
             buildForArchiving = "NO"
             buildForAnalyzing = "NO">
             <BuildableReference
@@ -55,17 +40,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "NO">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0B877EC2ED1F248AA3EFE160"
-            BuildableName = "StandbyApp.app"
-            BlueprintName = "StandbyApp"
-            ReferencedContainer = "container:StandbyWatch.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
    </TestAction>
@@ -83,14 +58,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0B877EC2ED1F248AA3EFE160"
-            BuildableName = "StandbyApp.app"
-            BlueprintName = "StandbyApp"
+            BlueprintIdentifier = "7BCB3EBD5AB851E379E6807B"
+            BuildableName = "StandbyWatchApp.app"
+            BlueprintName = "StandbyWatchApp"
             ReferencedContainer = "container:StandbyWatch.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -102,9 +75,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0B877EC2ED1F248AA3EFE160"
-            BuildableName = "StandbyApp.app"
-            BlueprintName = "StandbyApp"
+            BlueprintIdentifier = "7BCB3EBD5AB851E379E6807B"
+            BuildableName = "StandbyWatchApp.app"
+            BlueprintName = "StandbyWatchApp"
             ReferencedContainer = "container:StandbyWatch.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
