--- a/WatchApp/Info.plist
+++ b/WatchApp/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>com.standby.watchapp.watchapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -15,11 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<real>1</real>
+	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<integer>1</integer>
-	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.standby.watchapp.ios</string>
+	<string>1</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
